# agent-dock

./: .gitignore  AgentDock_DEV_AGENT_EXECUTION_PROMPT.md  AgentDock_PRD.md  AgentDock_SPEC.md  LICENSE  README.md  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: agent_profiles.rs  bootstrap.rs  fixtures.rs  lifecycle.rs  mod.rs  personality.rs  providers.rs  runtime_detection.rs  scanner.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/scanner/: hermes.rs  ignore.rs  mod.rs  openclaw.rs  redaction.rs  types.rs
apps/desktop/src/app/: App.tsx  styles.css
docs/engineering/: dev_log.md
tests/fixtures/hermes/profiles/consulting-agent/: SOUL.md  profile.json
tests/fixtures/hermes/profiles/dev-agent/: AGENTS.md  profile.yaml
tests/fixtures/hermes/profiles/model-no-provider/: profile.json
tests/fixtures/hermes/profiles/provider-matrix/: SOUL.md  profile.yaml
tests/fixtures/openclaw/agents/channel-matrix/: AGENTS.md  SOUL.md  config.json
tests/fixtures/openclaw/agents/companion-agent/: AGENTS.md  config.yaml
tests/fixtures/openclaw/agents/consulting-agent/: SOUL.md  config.json
tests/fixtures/openclaw/agents/model-no-provider/: config.yaml
tests/fixtures/openclaw/agents/provider-no-model/: config.json
tests/fixtures/openclaw/workspace-auto-business/: USER.md  agent.toml
(+17 files in other folders)
