[package]
name = "agentdock"
version = "0.1.0"
description = "Local-only desktop dashboard for OpenClaw and Hermes agent management"
authors = ["Atlax Tech"]
edition = "2021"
license = "MIT"

[lib]
name = "agentdock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "AgentDock"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
similar = "2"
tauri = { version = "2", features = [] }
thiserror = "2"
toml = "0.9"

[dev-dependencies]
tempfile = "3"
